# STAG-Modbus-Technology-Adapter

./: .clang-tidy  .gitignore  .gitlab-ci-templates.yml  .gitlab-ci.yml  .hspt-cpp  .template-ignores  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  NOTICE  README.md  ci-variables.yml  conanfile.py  example_config.json
.gitlab/issue_templates/: Bug.md  Feature.md  Task.md
cmake/: compiler_settings.cmake  conan_install.cmake
conan/: conanfile.py
conan/test_package/: CMakeLists.txt  example.cpp  loggerConfig.json
config/: example_config.json  loggerConfig.json
docs/code_documentation/: Custom_ContentFormat_Types.md  doc_main_page.md  main.md
gitlab-ci-configs/multi-system/: .gitlab-ci-templates.yml  .gitlab-ci.yml
gitlab-ci-configs/single-system-cached/: .gitlab-ci.yml  ci-variables.yml
includes/Adapter/: Burst.hpp  Bus.hpp  Config.hpp  ConfigJson.hpp  Index.hpp  LibmodbusAbstraction.hpp  ModbusTechnologyAdapter.hpp  Port.hpp  PortFinder.hpp  PortFinderPlan.hpp  RegisterSet.hpp  ThreadsafeStrerror.hpp
includes/Adapter/implementations/: Index__implementation.hpp  Logging__implementation.hpp  PortFinderPlan__implementation.hpp
includes/Adapter/internal/: Bus.hpp  Config.hpp  ConfigJson.hpp  Index.hpp  LibmodbusAbstraction.hpp  Logging.hpp  Modbus.hpp  ModbusTechnologyAdapterImplementation.hpp  ModbusTechnologyAdapterInterface.hpp  Port.hpp  PortFinder.hpp  PortFinderPlan.hpp  RegisterSet.hpp  ThreadsafeStrerror.hpp
licenses/Apache v2/: NOTICE
licenses/GPLv3/: NOTICE
sources/: CMakeLists.txt
sources/Adapter/: Burst.cpp  Burst.hpp  Bus.cpp  CMakeLists.txt  Config.cpp  ConfigJson.cpp  LibmodbusAbstraction.cpp  Modbus.cpp  ModbusTechnologyAdapter.cpp  ModbusTechnologyAdapterImplementation.cpp  Port.cpp  PortFinder.cpp  PortFinderPlan.cpp  RegisterSet.cpp  ThreadsafeStrerror.cpp
sources/Header Only Module/: CMakeLists.txt
sources/Internal Library Module/: CMakeLists.txt
sources/Main Runnable Module/: CMakeLists.txt
sources/Runner/: CMakeLists.txt  LocalIncludes.hpp  Readables.cpp  Readables.hpp  TechnologyAdapterDemoReader.cpp  TechnologyAdapterDemoReader.hpp  TechnologyAdapterDemoReader_implementation.hpp  main.cpp
test_package/: CMakeLists.txt  LocalIncludes.hpp  Readables.cpp  Readables.hpp  TechnologyAdapterDemoReader.cpp  TechnologyAdapterDemoReader.hpp  TechnologyAdapterDemoReader_implementation.hpp  conanfile.py  example.cpp
unit_tests/: CMakeLists.txt  testRunner.cpp
unit_tests/OnlyTestSuite/: Burst.cpp  Bus.cpp  ConfigJson.cpp  Index.cpp  ModbusTechnologyAdapterImplementation.cpp  Port.cpp  PortFinderPlan.cpp  RegisterSet.cpp  Specs.cpp  Specs.hpp  VirtualAdapter.cpp  VirtualAdapter.hpp  VirtualContext.cpp  VirtualContext.hpp
utility/: .create-static-website.py  .getVersionFromTag.py  create-static-website.py  getVersionFromTag.py  run-clang-format.py  run-lcov.py  run-valgrind.py  utilities.py
